--- a/src/client/css/style.css
+++ b/src/client/css/style.css
@@ -19,7 +19,9 @@ body {
   overflow-y: auto;
   width:100%;
   height:auto;
-  word-wrap:break-word;
+  /*word-wrap:break-word;*/
+  word-break: break-all;
+  white-space:pre-wrap;
 }
 html::-webkit-scrollbar { 
     display: none; 
